## Makefile.am
##
## (C) Copyright 2026 Fred Gleason <fredg@paravelsystems.com>
##
##   All Rights Reserved.
##
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = gpi_send-sample.conf-sample

CLEANFILES = *~
DISTCLEANFILES = rdfeed.conf
MAINTAINERCLEANFILES = *~\
                       aclocal.m4\
                       configure\
                       Makefile.in
