## automake.am
##
## docs/automake.am for PadPoint
##
## (C) Copyright 2015 Fred Gleason <fredg@paravelsystems.com>
##
##   All Rights Reserved.
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = DESTINATIONS.txt\
             PadPoint.lua\
             SOURCES.txt

CLEANFILES = *~
MAINTAINERCLEANFILES = *~\
                       aclocal.m4\
                       configure\
                       Makefile.in
